openshift/infinispan.yaml
apiVersion: v1
kind: List
items: 
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    name: infinispan-server
    namespace: myproject
    labels:
      app: infinispan-server
  spec:
    strategy:
      type: Rolling
      rollingParams:
        updatePeriodSeconds: 1
        intervalSeconds: 1
        timeoutSeconds: 600
        maxUnavailable: 25%
        maxSurge: 25%
      resources:
    triggers:
      - type: ConfigChange
    replicas: 1
    test: false
    selector:
      app: infinispan-server
      deploymentconfig: infinispan-server
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: infinispan-server
          deploymentconfig: infinispan-server
      spec:
        containers:
        - name: infinispan-server
          image: 'jboss/infinispan-server'
          args:
            - cloud
            - '-Djboss.default.jgroups.stack=kubernetes'
          ports:
            - containerPort: 7600
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8181
              protocol: TCP
            - containerPort: 8888
              protocol: TCP
            - containerPort: 9990
              protocol: TCP
            - containerPort: 11211
              protocol: TCP
            - containerPort: 11222
              protocol: TCP
            - containerPort: 57600
              protocol: TCP
          resources:
          terminationMessagePath: /dev/termination-log
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext:

- apiVersion: v1
  kind: Service
  metadata:
    name: infinispan-server
    labels:
      app: infinispan-server
  spec:
    ports:
      - name: 8080-tcp
        protocol: TCP
        port: 8080
        targetPort: 8080
    selector:
      app: infinispan-server
      deploymentconfig: infinispan-server

- apiVersion: v1
  kind: Route
  metadata:
    name: infinispan-server
    labels:
      app: infinispan-server
  spec:
    to:
      kind: Service
      name: infinispan-server
    port:
      targetPort: 8080-tcp
